# Spotify-Recommendation-Extension

./: Cargo.toml  README.md  build.sh  learning notes.md  lib.rs
extension/: manifest.json  manifest_cr.json  manifest_ff.json
extension/js/: background.js  content.js  popup.html  popup.js
server/: Cargo.toml
server/src/: db.rs  main.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: learning notes.md  lib.rs
tests/: wasm.rs
wasm_core/: Cargo.toml
