[package]
name = "server"
version = "0.1.0"
edition.workspace = true

[dependencies]
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["cors"] }
tokio = { version = "1.50.0", features = ["macros", "net", "rt-multi-thread", "time"] }
tracing-subscriber = "0.3.23"
aws-sdk-dynamodb = "1.110.0"
aws-config = { version = "1.8.15", features = ["behavior-version-latest"] }
tracing = "0.1.44"
shared = { path = "../shared" }